# hindex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
hindex/: __init__.py  hindex.py  hindex_test.py
tests/: test_hindex.py
