[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hindex"
version = "0.1.0"
description = "A Python package for computing bibliometric indices (h-index, g-index, i10-index, and more)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
keywords = ["h-index", "bibliometrics", "citations", "research", "academic", "g-index", "i10-index"]

[project.urls]
Homepage = "https://github.com/gxlarson/hindex"
Repository = "https://github.com/gxlarson/hindex"
Issues = "https://github.com/gxlarson/hindex/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
